--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,18 +1,46 @@
 @import "reset";
 
-nav {
-	padding: 100px 200px 0px;
-}
+// nav {
+// 	padding: 100px 200px 0px;
+// }
 
-#box {
-	width: 400px;
-	height: 400px;
-	background-color: hotpink;
-	margin: 100px 200px;
-	transition: all 1s;
+// #box {
+// 	width: 400px;
+// 	height: 400px;
+// 	background-color: hotpink;
+// 	margin: 100px 200px;
+// 	transition: all 1s;
 
-	&.on {
-		background-color: aqua;
-		transform: rotate(360deg);
+// 	&.on {
+// 		background-color: aqua;
+// 		transform: rotate(360deg);
+// 	}
+// }
+
+main {
+	width: 350px;
+	height: 700px;
+	margin: 100px auto;
+	background: linear-gradient(45deg, hotpink, violet);
+	border-radius: 20px;
+	overflow: hidden;
+	position: relative;
+
+	.btnToggle {
+		width: 30px;
+		height: 24px;
+		position: absolute;
+		top: 30px;
+		right: 30px;
+
+		display: flex;
+		flex-wrap: wrap;
+		align-content: space-between;
+
+		> div {
+			width: 100%;
+			height: 2px;
+			background-color: #fff;
+		}
 	}
 }
