자바스크립트 모바일 패널 이벤트 연결

--- a/css/style.css
+++ b/css/style.css
@@ -52,5 +52,19 @@ main .btnToggle.on > div.top {
 main .btnToggle.on > div.bottom {
   transform: translateY(-11px) rotate(-225deg);
 }
+main .mobilePanel {
+  width: 260px;
+  height: 100%;
+  position: absolute;
+  top: 0px;
+  left: -260px;
+  background-image: linear-gradient(45deg, #555, #333);
+  opacity: 0;
+  transition: all 0.5s;
+}
+main .mobilePanel.on {
+  left: 0px;
+  opacity: 1;
+}
 
 /*# sourceMappingURL=style.css.map */
