--- a/scss/style.scss
+++ b/scss/style.scss
@@ -62,4 +62,20 @@ main {
 			}
 		}
 	}
+
+	.mobilePanel {
+		width: 260px;
+		height: 100%;
+		position: absolute;
+		top: 0px;
+		left:-260px;
+		background-image: linear-gradient(45deg, #555, #333);
+		opacity: 0;
+		transition: all 0.5s;
+
+		&.on {
+			left: 0px;
+			opacity: 1;
+		}
+	}
 }
